src/objects/Commercial_Diplomacy_Triage__c.object
<CustomObject>
    <description>Object for triage of Commercial Diplomacy before a case is created.</description>
    <fields>
        <fullName>Activities__c</fullName>
        <description>Action</description>
        <inlineHelpText>Indicates the final action on the triage record.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to E&amp;C TANC for Action</fullName>
                </value>
                <value>
                    <fullName>Sent to Other ITA for Action</fullName>
                </value>
                <value>
                    <fullName>Sent to Other USG for Action</fullName>
                </value>
                <value>
                    <fullName>Sent to Foreign Government </fullName>
                </value>
                <value>
                    <fullName>Requested More Information</fullName>
                </value>
                <value>
                    <fullName>Polite response</fullName>
                </value>
                <value>
                    <fullName>Convert to Case</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Case Opened by GM/I&amp;A</fullName>
                </value>
                <value>
                    <fullName>--Select--</fullName>
                    <default>true</default>
                    <label>--Select--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adverse_Impact_on_Exports__c</fullName>
        <label>Adverse Impact on Exports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Commercial Diplomacy Triage</relationshipLabel>
        <relationshipName>Commercial_Diplomacy_Triage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the company&apos;s address</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>The action taken by the person reviewing the triage record.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Name of the requester&apos;s company</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_to_a_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert to a Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <description>Company Address: country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Recieved__c</fullName>
        <description>Date trade barrier information was submitted</description>
        <label>Date Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Replied__c</fullName>
        <description>Date replied to the trade barrier inquiry</description>
        <label>Date Replied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Trade_Barrier__c</fullName>
        <description>description of the trade barrier</description>
        <label>Description of Trade Barrier</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email provided by the Requester</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Requester&apos;s first name.</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Countries_Involved1__c</fullName>
        <label>Foreign Countries Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTS_Comments__c</fullName>
        <label>HTS Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_Referred__c</fullName>
        <description>To answer the question of how ITA was informed of this trade barrier.</description>
        <label>How Referred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--Select--</fullName>
                    <default>true</default>
                    <label>--Select--</label>
                </value>
                <value>
                    <fullName>Internet</fullName>
                    <label>Internet (identify site and search terms, if applicable)</label>
                </value>
                <value>
                    <fullName>In-person events (seminar, etc. identify event)</fullName>
                </value>
                <value>
                    <fullName>Referral/government contact (identify agency)</fullName>
                </value>
                <value>
                    <fullName>Referral private industry contact (identify company)</fullName>
                </value>
                <value>
                    <fullName>Referral/trade association (identify association) </fullName>
                </value>
                <value>
                    <fullName>Print (identify publication)</fullName>
                </value>
                <value>
                    <fullName>Other media</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                    <isActive>false</isActive>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                    <isActive>false</isActive>
                    <label>Phone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The last name of the requester.</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Requester contact info: phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_or_Service_Impacted__c</fullName>
        <description>The product or service being impacted by the trade barrier.</description>
        <label>Product or Service Impacted</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Details__c</fullName>
        <label>Referral Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Action_By_Foreign_Government__c</fullName>
        <label>Requires Action By Foreign Government</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Company address: the state</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--Select--</fullName>
                    <default>true</default>
                    <label>--Select--</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street address of the company</description>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_does_this_problem_involve__c</fullName>
        <description>Problem faced by the submitter.</description>
        <label>What does this problem involve?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--Select--</fullName>
                    <default>true</default>
                    <label>--Select--</label>
                </value>
                <value>
                    <fullName>Foreign government actions affecting Exports FROM the U.S.</fullName>
                </value>
                <value>
                    <fullName>Foreign government actions affecting Exports INTO the U.S.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zPostal_Code__c</fullName>
        <label>ZIP Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commercial Diplomacy Triage</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Commercial Diplomacy Triage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Diplomacy Triage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Character_Limit_for_Referral_Details</fullName>
        <active>false</active>
        <description>The Referral Details should not allow more than a 255 character and a notification should alert the user</description>
        <errorConditionFormula>LEN( Referral_Details__c ) &gt;= 7</errorConditionFormula>
        <errorDisplayField>Referral_Details__c</errorDisplayField>
        <errorMessage>You cannot enter characters over 255.</errorMessage>
    </validationRules>
</CustomObject>